src/main/gen/org/ziglang/plugins/lang/psi/parser/ZigParser.java
// This is a generated file. Not intended for manual editing.
package org.ziglang.plugins.lang.psi.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.ziglang.plugins.lang.psi.ZigTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ZigParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return zigFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARRAY_EXPR, BOOLEAN, CHAR, ERROR_SET_EXPR,
      EXPR, FLOAT, FN_PROTO, INTEGER,
      KEYWORD_LITERAL, NULL, STRING, SYMBOL),
  };

  /* ********************************************************** */
  // expr additionOperator expr
  public static boolean additionExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additionExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITION_EXPR, "<addition expr>");
    r = expr(b, l + 1);
    r = r && additionOperator(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // PLUS_SYM | MINUS_SYM | INC_SYM | PLUS_MOD_SYM | MINUS_MOD_SYM
  public static boolean additionOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additionOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITION_OPERATOR, "<addition operator>");
    r = consumeToken(b, PLUS_SYM);
    if (!r) r = consumeToken(b, MINUS_SYM);
    if (!r) r = consumeToken(b, INC_SYM);
    if (!r) r = consumeToken(b, PLUS_MOD_SYM);
    if (!r) r = consumeToken(b, MINUS_MOD_SYM);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACKET expr RIGHT_BRACKET
  public static boolean arrayAccessSuffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayAccessSuffix")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, ARRAY_ACCESS_SUFFIX, r);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACKET expr? RIGHT_BRACKET
  //  (ALIGN_KEYWORD LEFT_PAREN expr (COLON_SYM integer COLON_SYM integer)? RIGHT_PAREN)?
  //  CONST_KEYWORD? VOLATILE_KEYWORD? typeExpr
  public static boolean arrayExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && arrayExpr_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    r = r && arrayExpr_3(b, l + 1);
    r = r && arrayExpr_4(b, l + 1);
    r = r && arrayExpr_5(b, l + 1);
    r = r && typeExpr(b, l + 1);
    exit_section_(b, m, ARRAY_EXPR, r);
    return r;
  }

  // expr?
  private static boolean arrayExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_1")) return false;
    expr(b, l + 1);
    return true;
  }

  // (ALIGN_KEYWORD LEFT_PAREN expr (COLON_SYM integer COLON_SYM integer)? RIGHT_PAREN)?
  private static boolean arrayExpr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_3")) return false;
    arrayExpr_3_0(b, l + 1);
    return true;
  }

  // ALIGN_KEYWORD LEFT_PAREN expr (COLON_SYM integer COLON_SYM integer)? RIGHT_PAREN
  private static boolean arrayExpr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ALIGN_KEYWORD, LEFT_PAREN);
    r = r && expr(b, l + 1);
    r = r && arrayExpr_3_0_3(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COLON_SYM integer COLON_SYM integer)?
  private static boolean arrayExpr_3_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_3_0_3")) return false;
    arrayExpr_3_0_3_0(b, l + 1);
    return true;
  }

  // COLON_SYM integer COLON_SYM integer
  private static boolean arrayExpr_3_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_3_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON_SYM);
    r = r && integer(b, l + 1);
    r = r && consumeToken(b, COLON_SYM);
    r = r && integer(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CONST_KEYWORD?
  private static boolean arrayExpr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_4")) return false;
    consumeToken(b, CONST_KEYWORD);
    return true;
  }

  // VOLATILE_KEYWORD?
  private static boolean arrayExpr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayExpr_5")) return false;
    consumeToken(b, VOLATILE_KEYWORD);
    return true;
  }

  /* ********************************************************** */
  // COLON_SYM (string (COMMA_SYM string)*)?
  public static boolean asmClobbers(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmClobbers")) return false;
    if (!nextTokenIs(b, COLON_SYM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON_SYM);
    r = r && asmClobbers_1(b, l + 1);
    exit_section_(b, m, ASM_CLOBBERS, r);
    return r;
  }

  // (string (COMMA_SYM string)*)?
  private static boolean asmClobbers_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmClobbers_1")) return false;
    asmClobbers_1_0(b, l + 1);
    return true;
  }

  // string (COMMA_SYM string)*
  private static boolean asmClobbers_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmClobbers_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = string(b, l + 1);
    r = r && asmClobbers_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA_SYM string)*
  private static boolean asmClobbers_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmClobbers_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!asmClobbers_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "asmClobbers_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA_SYM string
  private static boolean asmClobbers_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmClobbers_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA_SYM);
    r = r && string(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASM_KEYWORD VOLATILE_KEYWORD?
  //  LEFT_PAREN string asmOutput? RIGHT_PAREN
  public static boolean asmExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmExpr")) return false;
    if (!nextTokenIs(b, ASM_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASM_KEYWORD);
    r = r && asmExpr_1(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && string(b, l + 1);
    r = r && asmExpr_4(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ASM_EXPR, r);
    return r;
  }

  // VOLATILE_KEYWORD?
  private static boolean asmExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmExpr_1")) return false;
    consumeToken(b, VOLATILE_KEYWORD);
    return true;
  }

  // asmOutput?
  private static boolean asmExpr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmExpr_4")) return false;
    asmOutput(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // COLON_SYM (asmInputItem (COMMA_SYM asmInputItem)*)? asmClobbers?
  public static boolean asmInput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInput")) return false;
    if (!nextTokenIs(b, COLON_SYM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON_SYM);
    r = r && asmInput_1(b, l + 1);
    r = r && asmInput_2(b, l + 1);
    exit_section_(b, m, ASM_INPUT, r);
    return r;
  }

  // (asmInputItem (COMMA_SYM asmInputItem)*)?
  private static boolean asmInput_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInput_1")) return false;
    asmInput_1_0(b, l + 1);
    return true;
  }

  // asmInputItem (COMMA_SYM asmInputItem)*
  private static boolean asmInput_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInput_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = asmInputItem(b, l + 1);
    r = r && asmInput_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA_SYM asmInputItem)*
  private static boolean asmInput_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInput_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!asmInput_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "asmInput_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA_SYM asmInputItem
  private static boolean asmInput_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInput_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA_SYM);
    r = r && asmInputItem(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // asmClobbers?
  private static boolean asmInput_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInput_2")) return false;
    asmClobbers(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LEFT_BRACKET symbol RIGHT_BRACKET string LEFT_PAREN expr RIGHT_PAREN
  public static boolean asmInputItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmInputItem")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && symbol(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    r = r && string(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ASM_INPUT_ITEM, r);
    return r;
  }

  /* ********************************************************** */
  // COLON_SYM (asmOutputItem (COMMA_SYM asmOutputItem)*)? asmInput?
  public static boolean asmOutput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutput")) return false;
    if (!nextTokenIs(b, COLON_SYM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON_SYM);
    r = r && asmOutput_1(b, l + 1);
    r = r && asmOutput_2(b, l + 1);
    exit_section_(b, m, ASM_OUTPUT, r);
    return r;
  }

  // (asmOutputItem (COMMA_SYM asmOutputItem)*)?
  private static boolean asmOutput_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutput_1")) return false;
    asmOutput_1_0(b, l + 1);
    return true;
  }

  // asmOutputItem (COMMA_SYM asmOutputItem)*
  private static boolean asmOutput_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutput_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = asmOutputItem(b, l + 1);
    r = r && asmOutput_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA_SYM asmOutputItem)*
  private static boolean asmOutput_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutput_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!asmOutput_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "asmOutput_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA_SYM asmOutputItem
  private static boolean asmOutput_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutput_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA_SYM);
    r = r && asmOutputItem(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // asmInput?
  private static boolean asmOutput_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutput_2")) return false;
    asmInput(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LEFT_BRACKET symbol RIGHT_BRACKET string LEFT_PAREN (symbol | SMALL_ARROW_SYM typeExpr) RIGHT_PAREN
  public static boolean asmOutputItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutputItem")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && symbol(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    r = r && string(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && asmOutputItem_5(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ASM_OUTPUT_ITEM, r);
    return r;
  }

  // symbol | SMALL_ARROW_SYM typeExpr
  private static boolean asmOutputItem_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutputItem_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = symbol(b, l + 1);
    if (!r) r = asmOutputItem_5_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SMALL_ARROW_SYM typeExpr
  private static boolean asmOutputItem_5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmOutputItem_5_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SMALL_ARROW_SYM);
    r = r && typeExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
